<resources>
    <string name="app_name">ChitChat</string>
    <string name="retrieve">Retrieve</string>
    <string name="insert">Insert</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter Name</string>
    <string name="author">Sven Schickentanz - fdai7287</string>
    <string name="appname">ChitChat App</string>
    <string name="ip">http://localhost</string>
    <string name="port">8081</string>
    <string name="type_your_message">Type your message</string>
    <string name="send">Send</string>
    <string name="back_to_user_selection">Go back to user selection</string>
    <string name="connected_users">Users</string>
    <string name="group_overview">Your Groups</string>
    <string name="enter_username_long">Enter your username:</string>
    <string name="enter_username">Enter Username</string>
    <string name="connect">Connect</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deleteMessageText">Message has been deleted.</string>
    <string name="deleteDialogText">Do you really want to delete the message?</string>
    <string name="deleteDialogTextIncoming">It will only be deleted for yourself.</string>
    <string name="deleteDialogTitle">Delete Message</string>
    <string name="editDialogTitle">Edit Message</string>
    <string name="clear_text">Clear Text</string>
    <string name="edit_your_message">Edit your message</string>
    <string name="last_edited_on">Last edited on:</string>
    <string name="message_group_addition">Group</string>
    <string name="add_group_description">Add Group</string>
    <string name="group_dialog_title">Create Group</string>
    <string name="group_dialog_text">Please enter your group name</string>
    <string name="select_group_member">Please select the group members</string>
    <string name="add_to_group">Add users to group</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="only_admin">Only the admin is allowed to change group members!</string>
    <string name="message_image_description">Image of message</string>
    <string name="media_pending">Waiting for media to load…</string>
    <string name="hello_user">"Hello %1$s!"</string>
    <string name="send_media_content">Send media to chat partner</string>
</resources>