<?xml version="1.0" encoding="utf-8"?>
<!-- Sven Schickentanz - fdai7287 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <include layout="@layout/banner_layout" />

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/banner_layout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/enterUsernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/enter_username_long" />


        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enterUsernameLabel"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:background="@android:color/white"
            android:textColorHint="#616161"
            android:autofillHints="Username" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameEditText"
            android:layout_marginTop="16dp"
            android:text="@string/connect" />
    </RelativeLayout>

</RelativeLayout>
