<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/banner_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/chatHeader"
        android:layout_above="@id/messageEditText"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:background="@android:color/white"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@id/sendButton"
        android:autofillHints="Message"
        android:background="@android:color/white"
        android:textColor="@color/black"
        android:hint="@string/type_your_message"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#616161" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/messageEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:onClick="sendMessage"
        android:text="@string/send" />

    <RelativeLayout
        android:id="@+id/chatHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner_layout"
        >
        <Button
            android:id="@+id/returnButton"
            android:contentDescription="@string/back_to_user_selection"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text=""
            android:background="@drawable/ic_back_arrow"
            android:layout_marginStart="4dp"/>

        <Button
            android:id="@+id/addToGroupButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:background="@drawable/ic_plus"
            android:contentDescription="@string/add_to_group"
            android:onClick="createUserSelectDialog"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/partnerNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/returnButton"
            android:layout_toStartOf="@+id/addToGroupButton"
            android:layout_centerHorizontal="true"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/groupNameView"
            android:text="@string/message_group_addition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/partnerNameView"
            android:textAlignment="center"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@+id/returnButton"
            android:layout_toStartOf="@+id/addToGroupButton"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:textSize="12sp" />
    </RelativeLayout>
</RelativeLayout>
